--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
 
     "build": "npm run clean;npm run build:osx",
-    "build:osx": "npm run clean:osx;electron-packager . piclock --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/appicon.icns",
+    "build:osx": "npm run clean:osx;electron-packager . piclock --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/WallMov.icns",
 
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
