--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "electron .",
 
     "build": "npm run clean;npm run build:osx;npm run build:win",
-    "build:osx": "npm run clean:osx;electron-packager . piclock --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/appicon.icns",
-    "build:win": "npm run clean:win;electron-packager . piclock --out=dist/win --platform=win32 --arch=ia32 --version=1.4.5 --icon=assets/appicon.ico",
+    "build:osx": "npm run clean:osx;electron-packager . piclock --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/WallMov_32.icns",
+    "build:win": "npm run clean:win;electron-packager . piclock --out=dist/win --platform=win32 --arch=ia32 --version=1.4.5 --icon=assets/WallMov_64.ico",
 
     "clean": "rm -rf ./dist",
-    "clean:osx": "rm -rf ./dist/osx"
+    "clean:osx": "rm -rf ./dist/osx",
+    "clean:win": "rm -rf ./dist/win"
   },
   "keywords": [],
   "author": "MakTak",
