--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "wallmov",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The movie wallpaper for UNIXsystem",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
 
     "build": "npm run clean;npm run build:osx;npm run build:win",
-    "build:osx": "npm run clean:osx;electron-packager . piclock --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/WallMov_32.icns",
-    "build:win": "npm run clean:win;electron-packager . piclock --out=dist/win --platform=win32 --arch=ia32 --version=1.4.5 --icon=assets/WallMov_64.ico",
+    "build:osx": "npm run clean:osx;electron-packager . WallMov --out=dist/osx --platform=darwin --arch=x64 --version=1.4.5 --icon=assets/WallMov_32.icns",
+    "build:win": "npm run clean:win;electron-packager . WallMov --out=dist/win --platform=win32 --arch=ia32 --version=1.4.5 --icon=assets/WallMov_64.ico",
 
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
